# fmon

./: .gitignore  .travis.yml  OptionParser.hs  README.md  Watch.hs  fmon.cabal  fmon.hs  test.hs  watch.hs
src/: OptionParser.hs  Watch.hs
test/: Spec.hs
