name:                fmon
version:             0.2.1.0
synopsis:            command runner based on filesystem changes
description:         small utility to run specified command when file gets modified / deleted in specified folder.  Utilizes fsnotify library.
homepage:            http://github.com/tshm/fmon.haskell
license:             MIT
license-file:        LICENSE
author:              toshihide satake
maintainer:          2sm@csc.jp
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8

Flag Debug
  Description: Enable debug support
  Default:     False

executable fmon
  main-is:             fmon.hs
  other-modules:       Watch
                     , OptionParser
  -- other-modules:       
  build-depends:       base >= 4.3.1.0 && < 5
                     , process
                     , fsnotify
  GHC-Options: -Wall -threaded
  if os(windows)
    CPP-Options: -DOS_Win32

  if flag(debug)
    CPP-Options: -DDEBUG

source-repository head
  type:              git
  location:          git://github.com/tshm/fmon

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       test.hs
  build-depends:       base >= 4.3.1.0 && < 5
                     , filepath
                     , directory
                     , process
                     , fsnotify
                     , doctest
