name:                fmon
version:             0.2.1.5
synopsis:            command runner based on filesystem changes
description:         small utility to run specified command when file gets modified / deleted in specified folder.  Utilizes fsnotify library.
homepage:            http://github.com/tshm/fmon.haskell
license:             MIT
license-file:        LICENSE
author:              tosh satake
maintainer:          2sm@csc.jp
-- copyright:           tosh stake
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag Debug
  Description: Enable debug support
  Default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Watch
                     , OptionParser
  build-depends:       base >= 4.7 && < 5
                     , process
                     , fsnotify
  default-language:    Haskell2010


executable fmon
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , fmon
                     , process
                     , fsnotify
  default-language:    Haskell2010

  GHC-Options: -Wall -threaded
  if os(windows)
    CPP-Options: -DOS_Win32

  if flag(debug)
    CPP-Options: -DDEBUG

source-repository head
  type:     git
  location: https://github.com/tshm/fmon

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fmon
                     , filepath
                     , directory
                     , process
                     , fsnotify
                     , doctest
  default-language:    Haskell2010

